home-cluster/vpn/test-vpn.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vpn
---
apiVersion: v1
kind: Service
metadata:
  name: gluetun
  namespace: vpn
spec:
  selector:
    app: gluetun
  ports:
  - port: 8080
    targetPort: 8080
    name: qbittorrent
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gluetun
  namespace: vpn
  labels:
    app: gluetun
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gluetun
  template:
    metadata:
      labels:
        app: gluetun
    spec:
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 8.8.8.8
      containers:
      - name: gluetun
        image: qmcgaw/gluetun:v3.40.3
        securityContext:
          privileged: true
          capabilities:
            add: [NET_ADMIN, SYS_MODULE]
        ports:
        - containerPort: 8000
          name: http
        volumeMounts:
        - name: downloads
          mountPath: /downloads
      - name: qbittorrent
        image: linuxserver/qbittorrent:latest
        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: config-init
        configMap:
          name: qbittorrent-config
      - name: config
        persistentVolumeClaim:
          claimName: qbittorrent-config-pvc
      - name: downloads
        hostPath:
          path: /mnt/nas/torrents/Downloads
          type: Directory
