home-cluster/vpn/vpn-qbittorent.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vpn
---
apiVersion: v1
kind: Service
metadata:
  name: gluetun
  namespace: vpn
spec:
  selector:
    app: gluetun
  ports:
  - port: 8080
    targetPort: 8080
    name: qbittorrent
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gluetun
  namespace: vpn
  labels:
    app: gluetun
    alert-on-down: "true"
  annotations:
    configmap.reloader.stakater.com/reload: "qbittorrent-config"
    secret.reloader.stakater.com/reload: "vpn-secret,qbittorrent-secret,expressvpn-ovpn"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: gluetun
  template:
    metadata:
      labels:
        app: gluetun
    spec:
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 8.8.8.8
      containers:
      - name: gluetun
        image: qmcgaw/gluetun:v3.41.3
        resources:
          requests:
            memory: 64Mi
        limits:
          memory: 128Mi
        securityContext:
          privileged: true
          capabilities:
            add: [NET_ADMIN, SYS_MODULE]
        readinessProbe:
          exec:
            command:
              - sh
              - -c
              - ip link show tun0 | grep -q UP
          initialDelaySeconds: 30
          periodSeconds: 10
        ports:
        - containerPort: 8000
          name: http
        volumeMounts:
        - name: downloads
          mountPath: /downloads
        - name: ovpn-config
          mountPath: /etc/ovpn-config
          readOnly: true
      - name: qbittorrent
        image: linuxserver/qbittorrent:version-5.2.3_v2.0.15
        resources:
          requests:
            memory: 64Mi
        limits:
          memory: 128Mi
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: config-init
        configMap:
          name: qbittorrent-config
      - name: config
        persistentVolumeClaim:
          claimName: qbittorrent-config-pvc
      - name: downloads
        hostPath:
          path: /mnt/nas/torrents/Downloads
          type: Directory
      - name: expressvpn-ovpn
        secret:
          secretName: expressvpn-ovpn
      - name: ovpn-config
        emptyDir: {}
